--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,13 @@ python:
 # Install dependencies
 install:
     - pip install -r requirements.txt
+    - pip install coveralls
+    - pip install codeclimate-test-reporter
 
 # Run tests
 script:
      - pytest --cov=app
+     - coveralls
 
 after_success:
     - coveralls
