--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ codecov==2.0.15
 coverage==4.5.2
 Flask==1.0.2
 flask-restplus==0.12.1
+gunicorn==19.9.0
 idna==2.8
 isort==4.3.4
 itsdangerous==1.1.0
@@ -18,7 +19,7 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
 more-itertools==5.0.0
-#pkg-resources==0.0.0
+pkg-resources==0.0.0
 pluggy==0.8.1
 py==1.7.0
 pylint==2.2.2
